# km-peeler

./: .gitignore  .gitmodules  2set.py  CMakeLists.txt  LICENSE  Makefile  README.md  aldiff.c  build_main.c  build_main.h  collection_main.c  collection_main.h  configure.py  constants.c  constants.h  cws.cpp  diff_main.c  diff_main.h  dump_main.c  dump_main.h  endian_fixer.c  endian_fixer.h  err.c  err.h  ibflib.c  ibflib.h  jaccard_main.c  jaccard_main.h  kmers_main.c  kmers_main.h  list_main.c  list_main.h  minHash.c  minHash.h  minimizers_main.c  minimizers_main.h  mmlib.c  mmlib.h  prettyfy.py  print_main.c  (+7 more)
include/: IBLT.hpp  bias.hpp  build.hpp  compile_constants.hpp  constants.hpp  correct.hpp  diff.hpp  dump.hpp  external_memory_vector.hpp  hash.hpp  io.hpp  iterators.hpp  kmer_view.hpp  memory_mapped_file.hpp  minimizer_sampler.hpp  minimizer_view.hpp  ordered_unique_sampler.hpp  super_kmer_view.hpp  syncmer_sampler.hpp  utils.hpp
kmc_api/: kmer_defs.h
scripts/: dataset_info.txt  download_datasets.py  essentials.py  experiments.py  fastx.py  get_similar_cluster.py  kmc_wrapper.py  kmer.py  kmp_wrapper.py  mash_wrapper.py  mutate.py  pbench.py  plotter.py  run_experiments.sh  salmonella_dataset_info.txt  shlib.py  tuberculosis_accessions.txt
scripts/kmc_extra/: cws.cpp
scripts/kmc_extra/kmc_api/: kmer_defs.h
src/: IBLT.cpp  bias.cpp  build.cpp  correct.cpp  diff.cpp  dump.cpp  iterators.cpp  kmp.cpp  utils.cpp
tests/: completeness.cpp  difference.sh  emv.cpp  skv.cpp
